Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-136576

QNdefNfcSmartPosterRecord might leak memory

XMLWordPrintable

    • 2
    • 274b9ea62 (dev), 88d89fe62 (6.9), 783df6cc6 (tqtc/lts-6.8), 2b26febf9 (tqtc/lts-6.5), 064e5f92d (tqtc/lts-5.15)
    • Foundation Sprint 130

      The pointers to the internal records of QNdefNfcSmartPosterRecordPrivate seem to be deleted in QNdefNfcSmartPosterRecord::cleanup(), but it is not called when the record is destroyed.

      Check if it's really leaking the memory, and fix.

        For Gerrit Dashboard: QTBUG-136576
        # Subject Branch Project Status CR V

            ivan.solovev Ivan Solovev
            ivan.solovev Ivan Solovev
            Vladimir Minenko Vladimir Minenko
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes